efishiery/logs/dag_with_postgres_v2/postgres_to_s3/2022-09-04T00:00:00+00:00/1.log
[2022-09-05 06:45:24,127] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_v2.postgres_to_s3 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 06:45:24,194] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_v2.postgres_to_s3 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 06:45:24,195] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 06:45:24,196] {taskinstance.py:1043} INFO - Starting attempt 1 of 2
[2022-09-05 06:45:24,197] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 06:45:24,231] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): postgres_to_s3> on 2022-09-04T00:00:00+00:00
[2022-09-05 06:45:24,236] {standard_task_runner.py:52} INFO - Started process 2121 to run task
[2022-09-05 06:45:24,243] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'dag_with_postgres_v2', 'postgres_to_s3', '2022-09-04T00:00:00+00:00', '--job-id', '142', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/dags_with_postgres.py', '--cfg-path', '/tmp/tmpbu4925__', '--error-file', '/tmp/tmppcomv42n']
[2022-09-05 06:45:24,246] {standard_task_runner.py:77} INFO - Job 142: Subtask postgres_to_s3
[2022-09-05 06:45:24,376] {logging_mixin.py:104} INFO - Running <TaskInstance: dag_with_postgres_v2.postgres_to_s3 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 06:45:24,464] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=coder2j
AIRFLOW_CTX_DAG_ID=dag_with_postgres_v2
AIRFLOW_CTX_TASK_ID=postgres_to_s3
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 06:45:24,503] {base.py:74} INFO - Using connection to: id: postgres_localhost. Host: 172.17.0.1, Port: 5432, Schema: test, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 06:45:24,514] {taskinstance.py:1455} ERROR - syntax error at or near "exist"
LINE 1: create table if not exist dag_runs(
                            ^
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dags_with_postgres.py", line 26, in postgres_to_s3
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "exist"
LINE 1: create table if not exist dag_runs(
                            ^

[2022-09-05 06:45:24,527] {taskinstance.py:1503} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_v2, task_id=postgres_to_s3, execution_date=20220904T000000, start_date=20220905T064524, end_date=20220905T064524
[2022-09-05 06:45:24,664] {local_task_job.py:146} INFO - Task exited with return code 1
[2022-09-05 06:47:02,567] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_v2.postgres_to_s3 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 06:47:02,693] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: dag_with_postgres_v2.postgres_to_s3 2022-09-04T00:00:00+00:00 [queued]>
[2022-09-05 06:47:02,694] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 06:47:02,694] {taskinstance.py:1043} INFO - Starting attempt 1 of 2
[2022-09-05 06:47:02,695] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-09-05 06:47:02,775] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): postgres_to_s3> on 2022-09-04T00:00:00+00:00
[2022-09-05 06:47:02,780] {standard_task_runner.py:52} INFO - Started process 2153 to run task
[2022-09-05 06:47:02,786] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'dag_with_postgres_v2', 'postgres_to_s3', '2022-09-04T00:00:00+00:00', '--job-id', '143', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/dags_with_postgres.py', '--cfg-path', '/tmp/tmpveh10a7o', '--error-file', '/tmp/tmpg3v51hx5']
[2022-09-05 06:47:02,790] {standard_task_runner.py:77} INFO - Job 143: Subtask postgres_to_s3
[2022-09-05 06:47:02,901] {logging_mixin.py:104} INFO - Running <TaskInstance: dag_with_postgres_v2.postgres_to_s3 2022-09-04T00:00:00+00:00 [running]> on host 2b8e628fc16c
[2022-09-05 06:47:03,050] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=coder2j
AIRFLOW_CTX_DAG_ID=dag_with_postgres_v2
AIRFLOW_CTX_TASK_ID=postgres_to_s3
AIRFLOW_CTX_EXECUTION_DATE=2022-09-04T00:00:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-09-04T00:00:00+00:00
[2022-09-05 06:47:03,076] {base.py:74} INFO - Using connection to: id: postgres_localhost. Host: 172.17.0.1, Port: 5432, Schema: test, Login: airflow, Password: XXXXXXXX, extra: None
[2022-09-05 06:47:03,232] {python.py:118} INFO - Done. Returned value was: None
[2022-09-05 06:47:03,349] {taskinstance.py:1166} INFO - Marking task as SUCCESS. dag_id=dag_with_postgres_v2, task_id=postgres_to_s3, execution_date=20220904T000000, start_date=20220905T064702, end_date=20220905T064703
[2022-09-05 06:47:03,456] {taskinstance.py:1220} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2022-09-05 06:47:03,479] {local_task_job.py:146} INFO - Task exited with return code 0
